# loopsmith

./: .gitignore  .graphifyignore  AGENTS.md  LICENSE  README.md  agentctl.cmd  config.toml  loopsmith.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml  verify.yml
agentctl/: agentctl.cmd  agentctl.py  bootstrap.py  bundle_install.py  codex_worker.py  playwright.cmd  playwright_cli.py
agentctl/lib/: __init__.py  branding.py  capabilities.py  common.py  computer_intel.py  config_layers.py  guidance.py  inventory.py  maintenance.py  overview.py  paths.py  repo_intel.py  research.py  self_check.py  skill_map.py  skills_ops.py  workflows.py
agentctl/references/: capability-registry.md  cloud-readiness.md  maintenance-contract.md  research-envelope.md  state-schema.md
agentctl/state/: guidance.json  inventory.json  workspace-graph.json
agentctl/tests/: test_bootstrap.py  test_browser_smoke.py  test_capabilities.py  test_cli_output.py  test_codex_runtime.py  test_codex_worker.py  test_computer_intel.py  test_config_layers.py  test_guidance.py  test_install_bundle.py  test_inventory.py  test_maintenance.py  test_repo_intel.py  test_research.py  test_skill_map.py  test_skills_ops.py  test_workflows.py
docs/agent-cli-os/: capability-registry.md  cloud-readiness.md  command-map.md  computer-intel.md  install-on-another-computer.md  inventory.md  maintainer-guide.md  maintenance.md  overview.md  repo-intel-automation.md  repo-intel.md  repo-intelligence-evaluation-2026-04-20.md  selfmade-skills-evaluation.json  selfmade-skills-evaluation.md  selfmade-skills-improvement-overview.md  skill-governance.md  skill-map.md  state-schema.md  unattended-worker-setup.md  zero-touch-setup.md
docs/agentctl/: capability-registry.md  cloud-readiness.md  command-map.md  install-on-another-computer.md  maintainer-guide.md  maintenance.md  overview.md  state-schema.md  unattended-worker-setup.md  zero-touch-setup.md
docs/loopsmith/: capability-registry.md  cloud-readiness.md  command-map.md  install-on-another-computer.md  inventory.md  maintainer-guide.md  maintenance.md  overview.md  skill-governance.md  state-schema.md  unattended-worker-setup.md  zero-touch-setup.md
scripts/: build_release_bundle.py  install_bundle.py
skills/agentcli-maintenance-engineer/: SKILL.md
skills/agentctl-maintenance-engineer/: SKILL.md
skills/android-testing-capability/: SKILL.md
skills/autonomous-deep-runs-capability/: SKILL.md
workflow-tools/: render_progress.py  workflow_common.py  workflow_guard.py  workflow_runner.py  workflow_schema.md
(+231 files in other folders)
