[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cli-os"
version = "0.1.4"
description = "Capability-first Codex control plane for long-running developer workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Leonard Verhamme" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/leonardverhamme/agent-cli-os"
Repository = "https://github.com/leonardverhamme/agent-cli-os"
Issues = "https://github.com/leonardverhamme/agent-cli-os/issues"

[project.scripts]
agentcli = "agentctl.bootstrap:main"
agentcli-bootstrap = "agentctl.bootstrap:main"
loopsmith = "agentctl.bootstrap:main"
loopsmith-bootstrap = "agentctl.bootstrap:main"
agentctl = "agentctl.bootstrap:main"
agentctl-bootstrap = "agentctl.bootstrap:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agentctl", "agentctl.lib"]
